@@ -21,6 +21,8 @@ fulldebug_architectures :=
 disabled_jit_architectures := armel mips mipsel
 disabled_pch_architectures := amd64 powerpc s390x
 
+small_architectures := armhf mipsel
+
 defines+=use_system_expat=1 \
          use_system_ffmpeg=1 \
          use_system_flac=1 \
@@ -108,7 +110,15 @@ endif
 ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), $(disabled_pch_architectures)))
 	echo "CONFIG -= precompile_header" >> .qmake.conf
 endif
-	
+
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), $(small_architectures)))
+	echo "QMAKE_CXXFLAGS += --param ggc-min-expand=20" >> .qmake.conf
+	echo "QMAKE_CFLAGS += --param ggc-min-expand=20" >> .qmake.conf
+	echo "QMAKE_LFLAGS -= Wl,--gc-sections" >> .qmake.conf
+	echo "QMAKE_LFLAGS -= -use-ld=gold" >> .qmake.conf
+	echo "QMAKE_LFLAGS += -use-ld=bfd" >> .qmake.conf
+endif
+
 	# Make ld not cache the symbol tables of input files in memory to avoid memory exhaustion during the linking phase.
 	echo "QMAKE_LFLAGS += -Wl,--no-keep-memory" >> .qmake.conf
 	
